fix: Se agregan ajustes del codigo udistrital/tesoreria_cliente#145
