# controllers/conceptos.go
@@ -9,106 +9,112 @@ import (
 	"github.com/udistrital/cuentas_contables_crud/helpers"
 	"github.com/udistrital/cuentas_contables_crud/managers"
 	"github.com/udistrital/cuentas_contables_crud/models"
+	"github.com/udistrital/utils_oas/errorctrl"
 	"go.mongodb.org/mongo-driver/bson/primitive"
-
 )
 
 // ConceptosController ...
 type ConceptosController struct {
 	beego.Controller
 	nodeConcCompositor compositors.ConceptosCompositor
-	commonHelper     helpers.CommonHelper
-	nodeConcCManager    managers.ConceptosManager
-	crudManager      managers.CrudManager
+	commonHelper       helpers.CommonHelper
+	nodeConcCManager   managers.ConceptosManager
+	crudManager        managers.CrudManager
 }
 
-// GetTree función para obtener todos los objetos
+// GetTree ...
 // @Title GetTree
-// @Description get all objects
-// @Param	query	fullTree	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
-// @Success 200 Conceptos []models.Conceptos
-// @Failure 403 :objectId is empty
+// @Description get conceptos
+// @Success 200 {object} []models.Conceptos
+// @Failure 400 :objectId is empty
 // @router / [get]
 func (c *ConceptosController) GetTree() {
-	fullTree := false
-	if v, err := c.GetBool("fullTree"); v && err == nil {
-		fullTree = v
+	defer errorctrl.ErrorControlController(c.Controller, "ConceptosController")
+	if treeData, err := c.nodeConcCompositor.BuildTreeConceptos(); err == nil {
+		c.Data["json"] = c.commonHelper.DefaultResponse(200, err, treeData)
+	} else {
+		panic(errorctrl.Error("GetTree", err, "500"))
 	}
-	treeData, err := c.nodeConcCompositor.BuildTreeConceptos(fullTree)
-	c.Data["json"] = c.commonHelper.DefaultResponse(200, err, treeData)
 	c.ServeJSON()
 }
 
-// GetByCodigo función para obtener todos los objetos
-// @Title Get
-// @Description get all objects
-// @Success 200 Conceptos models.Conceptos
-// @Failure 403 :objectId is empty
+// GetByCodigo ...
+// @Title GetByCodigo
+// @Description get conceptos por codigo
+// @Param	Codigo		path 	string	true		"Codigo del concepto"
+// @Success 200 {object} models.Conceptos
+// @Failure 400 :object is empty
 // @router /:Codigo [get]
 func (c *ConceptosController) GetByCodigo() {
+	defer errorctrl.ErrorControlController(c.Controller, "ConceptosController")
+
 	Codigo := c.GetString(":Codigo")
-
-	nodeInfo, err := c.nodeConcCompositor.GetNodeByCodigo(Codigo)
-
-	c.Data["json"] = c.commonHelper.DefaultResponse(200, err, nodeInfo)
+	if nodeInfo, err := c.nodeConcCompositor.GetNodeByCodigo(Codigo); err == nil {
+		c.Data["json"] = c.commonHelper.DefaultResponse(200, err, nodeInfo)
+	} else {
+		panic(errorctrl.Error("GetByCodigo", err, "404"))
+	}
 
 	c.ServeJSON()
 
 }
 
-// AddNode Método Post de HTTP
-// @Title Post models.Conceptos
-// @Description Post models.Conceptos
-// @Param	body		body 	models.Conceptos	true		"Body para la creacion de models.Conceptos"
-// @Success 200 {int} models.Conceptos.Id
-// @Failure 403 body is empty
+// AddNode ..
+// @Title AddNode
+// @Description create conceptos
+// @Param	body		body 	models.Conceptos	true		"Body para la creacion de conceptos"
+// @Success 201 {object} models.Conceptos
+// @Failure 400 body is empty
 // @router / [post]
 func (c *ConceptosController) AddNode() {
+	defer errorctrl.ErrorControlController(c.Controller, "ConceptosController")
 	var requestBody models.Conceptos
 
-	err := json.Unmarshal(c.Ctx.Input.RequestBody, &requestBody)
-
-	message := ""
-
-	if err == nil {
-		err = c.nodeConcCompositor.AddNodeConceptos(&requestBody)
+	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &requestBody); err == nil {
+		if err = c.nodeConcCompositor.AddNodeConceptos(&requestBody); err == nil {
+			c.Data["json"] = c.commonHelper.DefaultResponse(201, err, requestBody)
+		} else {
+			panic(errorctrl.Error("AddNode", err, "500"))
+		}
+	} else {
+		panic(errorctrl.Error("AddNode", err, "500"))
 	}
-
-	if err == nil {
-		message = "node-added"
-	}
-
-	c.Data["json"] = c.commonHelper.DefaultResponse(200, err, message)
-
 	c.ServeJSON()
 }
 
-// UpdateNode Método PUT de HTTP
+// UpdateNode ...
 // @Title PUT UpdateNode
-// @Description Put models.Conceptos
+// @Description Put conceptos
 // @Param	UUID		path 	string	true		"The key for object to update"
 // @Param	body		body 	models.Conceptos	true		"Body para la actualizacion de models.Conceptos"
-// @Success 200 {int} models.Conceptos.Id
-// @Failure 403 body is empty
+// @Success 200 {object} models.Conceptos
+// @Failure 400 body is empty
 // @router /:UUID [put]
 func (c *ConceptosController) UpdateNode() {
+	defer errorctrl.ErrorControlController(c.Controller, "ConceptosController")
 	uuid := c.GetString(":UUID")
 	var requestBody models.Conceptos
 
-	err := json.Unmarshal(c.Ctx.Input.RequestBody, &requestBody)
-	message := ""
-
-	if err == nil {
+	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &requestBody); err == nil {
 		requestBody.ID, _ = primitive.ObjectIDFromHex(uuid)
 		var resul interface{}
-		err = c.crudManager.UpdateDocument(requestBody, requestBody.ID, models.ArbolConceptosCollection, &resul)
-		if err == nil {
-			message = "node-updated"
+		if err = c.crudManager.UpdateDocument(requestBody, requestBody.ID, models.ArbolConceptosCollection, &resul); err == nil {
+			//message = "node-updated"
+			c.Data["json"] = c.commonHelper.DefaultResponse(200, err, requestBody)
+		} else {
+			panic(errorctrl.Error("UpdateNode", err, "500"))
 		}
+		if err == nil {
+		}
+		//message := ""
 	} else {
-		message = "invalid-body"
+		panic(errorctrl.Error("UpdateNode", err, "500"))
 	}
 
-	c.Data["json"] = c.commonHelper.DefaultResponse(200, err, message)
+	// if err == nil {
+	// } else {
+	// 	message = "invalid-body"
+	// }
+
 	c.ServeJSON()
 }
