# swagger/swagger.yml
@@ -204,51 +204,60 @@ paths:
     get:
       tags:
       - conceptos
-      description: get all objects
+      description: get conceptos
       operationId: ConceptosController.GetTree
-      parameters:
-      - in: fullTree
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
       responses:
         "200":
-          description: Conceptos []models.Conceptos
-        "403":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.Conceptos'
+        "400":
           description: :objectId is empty
     post:
       tags:
       - conceptos
-      description: Post models.Conceptos
-      operationId: ConceptosController.Post models.Conceptos
+      description: create conceptos
+      operationId: ConceptosController.AddNode
       parameters:
       - in: body
         name: body
-        description: Body para la creacion de models.Conceptos
+        description: Body para la creacion de conceptos
         required: true
         schema:
           $ref: '#/definitions/models.Conceptos'
       responses:
-        "200":
-          description: '{int} models.Conceptos.Id'
-        "403":
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Conceptos'
+        "400":
           description: body is empty
   /conceptos/{Codigo}:
     get:
       tags:
       - conceptos
-      description: get all objects
-      operationId: ConceptosController.Get
+      description: get conceptos por codigo
+      operationId: ConceptosController.GetByCodigo
+      parameters:
+      - in: path
+        name: Codigo
+        description: Codigo del concepto
+        required: true
+        type: string
       responses:
         "200":
-          description: Conceptos models.Conceptos
-        "403":
-          description: :objectId is empty
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Conceptos'
+        "400":
+          description: :object is empty
   /conceptos/{UUID}:
     put:
       tags:
       - conceptos
-      description: Put models.Conceptos
+      description: Put conceptos
       operationId: ConceptosController.PUT UpdateNode
       parameters:
       - in: path
@@ -264,8 +273,10 @@ paths:
           $ref: '#/definitions/models.Conceptos'
       responses:
         "200":
-          description: '{int} models.Conceptos.Id'
-        "403":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Conceptos'
+        "400":
           description: body is empty
   /detalle_cuenta_contable/:
     get:
